src/components/Movies/MovieCard/MovieCard.module.css
.movie {
  width: 30rem;
  overflow: hidden;
  cursor: pointer;
  background-color: var(--primary-color);
  transition: all .3s ease;
}

.movie:hover {
  transform: scale(1.05);
}

.movie-img {
  width: 100%;
}

.movie-info {
  padding: 1rem;
  font-size: 1.6rem;

  display: flex;
  justify-content: space-between;
  align-items: center;
}

.movie-rating {
  background-color: var(--secondary-color);
  margin-left: 0.6rem;
  padding: 0.5rem; 
  min-width: 3.4rem;
  border-radius: 50%;
  text-align: center;
}

